fase3-cicd/terraform/security-group.tf
resource "aws_security_group" "jenkins" {
  name        = "pcfactory-jenkins-sg"
  description = "Security group for Jenkins"
  vpc_id      = aws_vpc.jenkins.id

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Jenkins UI"
    from_port   = var.jenkins_port
    to_port     = var.jenkins_port
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "Allow all outbound"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "pcfactory-jenkins-sg"
  }
}
